[TASK] Fix indentation

--- a/Resources/Private/Language/locallang_csh_tx_bulmapackage_settings.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_bulmapackage_settings.xlf
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2019-07-05T09:11:39Z"
-		  product-name="bulma_package">
-		<header/>
-		<body>
-			<trans-unit id="code_analytics.description">
-				<source>Only the tracking code, eg: UA-12345678-9</source>
-			</trans-unit>
-		</body>
-	</file>
+    <file source-language="en" datatype="plaintext" original="messages" date="2019-07-05T09:11:39Z" product-name="bulma_package">
+        <header/>
+        <body>
+            <trans-unit id="code_analytics.description">
+                <source>Only the tracking code, eg: UA-12345678-9</source>
+            </trans-unit>
+        </body>
+    </file>
 </xliff>
