--- a/Resources/Private/Language/locallang_mod.xlf
+++ b/Resources/Private/Language/locallang_mod.xlf
@@ -4,13 +4,13 @@
           product-name="bulma_package">
         <header/>
         <body>
-            <trans-unit id="mlang_tabs_tab" xml:space="preserve">
+            <trans-unit id="mlang_tabs_tab">
 				<source>Website</source>
 			</trans-unit>
-            <trans-unit id="mlang_labels_tablabel" xml:space="preserve">
+            <trans-unit id="mlang_labels_tablabel">
 				<source>Website configuration</source>
 			</trans-unit>
-            <trans-unit id="mlang_labels_tabdescr" xml:space="preserve">
+            <trans-unit id="mlang_labels_tabdescr">
 				<source>This module allows you to configure your website elements such as logos, title, and more.</source>
 			</trans-unit>
         </body>
