--- a/Resources/Private/Language/locallang_mod.xlf
+++ b/Resources/Private/Language/locallang_mod.xlf
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2019-07-05T09:11:39Z"
-          product-name="bulma_package">
+    <file source-language="en" datatype="plaintext" original="messages" date="2019-07-05T09:11:39Z" product-name="bulma_package">
         <header/>
         <body>
             <trans-unit id="mlang_tabs_tab">
-				<source>Website</source>
-			</trans-unit>
+                <source>Website</source>
+            </trans-unit>
             <trans-unit id="mlang_labels_tablabel">
-				<source>Website configuration</source>
-			</trans-unit>
+                <source>Website configuration</source>
+            </trans-unit>
             <trans-unit id="mlang_labels_tabdescr">
-				<source>This module allows you to configure your website elements such as logos, title, and more.</source>
-			</trans-unit>
+                <source>This module allows you to configure your website elements such as logos, title, and more.</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
