[TASK] Correct label for desktop content frame

--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -652,7 +652,7 @@
                 <source>Hero</source>
             </trans-unit>
             <trans-unit id="content_frame.desktop">
-                <source>Desktop</source>
+                <source>Reduced</source>
             </trans-unit>
             <trans-unit id="tt_content.colPos.nestedContentColPos">
                 <source>Nested content</source>
