[FEATURE] Add the possibility to limit the number of pages displayed for menus "Thumbnails/Cards of subpages"

--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -51,6 +51,9 @@
             <trans-unit id="field.ignore_nav_hide">
                 <source>Display "menu excluded" pages</source>
             </trans-unit>
+            <trans-unit id="field.max_items">
+                <source>Max pages displayed</source>
+            </trans-unit>
             <trans-unit id="field.gallery_size">
                 <source>Size</source>
             </trans-unit>
