[FEATURE] Add geographic coordinates in website configuration

--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -606,6 +606,12 @@
             <trans-unit id="tx_bulmapackage_settings.email">
                 <source>Email</source>
             </trans-unit>
+            <trans-unit id="tx_bulmapackage_settings.latitude">
+                <source>Latitude</source>
+            </trans-unit>
+            <trans-unit id="tx_bulmapackage_settings.longitude">
+                <source>Longitude</source>
+            </trans-unit>
             <trans-unit id="tx_bulmapackage_settings.tx_bulmapackage_settings_link_item">
                 <source>Links</source>
             </trans-unit>
