[FEATURE] Add meta tag management

--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -675,6 +675,15 @@
             <trans-unit id="news.templateLayouts.4cols">
                 <source>4 Columns</source>
             </trans-unit>
+            <trans-unit id="tx_bulmapackage_meta_tags">
+                <source>Meta Tag</source>
+            </trans-unit>
+            <trans-unit id="tx_bulmapackage_meta_tags.name">
+                <source>Name</source>
+            </trans-unit>
+            <trans-unit id="tx_bulmapackage_meta_tags.content">
+                <source>Content</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
