--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -708,6 +708,9 @@
             <trans-unit id="tx_bulmapackage_meta_tags.content">
                 <source>Content</source>
             </trans-unit>
+            <trans-unit id="field.default_thumbnail">
+                <source>Default thumbnail</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
