--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -499,13 +499,13 @@
                 <source>Default</source>
             </trans-unit>
             <trans-unit id="backend_layout.sidebar_left">
-                <source>Sidebar Left</source>
+                <source>Sidebar Left (optional)</source>
             </trans-unit>
             <trans-unit id="backend_layout.sidebar_left_w_navigation">
                 <source>Sidebar Left with navigation</source>
             </trans-unit>
             <trans-unit id="backend_layout.sidebar_right">
-                <source>Sidebar Right</source>
+                <source>Sidebar Right (optional)</source>
             </trans-unit>
             <trans-unit id="backend_layout.sidebar_right_w_navigation">
                 <source>Sidebar Right with navigation</source>
@@ -520,7 +520,7 @@
                 <source>After content</source>
             </trans-unit>
             <trans-unit id="backend_layout.column.sidebar">
-                <source>Sidebar</source>
+                <source>Sidebar (optional)</source>
             </trans-unit>
             <trans-unit id="backend_layout.column.sidebar_w_navigation">
                 <source>Sidebar (with navigation)</source>
