[!!!][FEATURE] Add EXT:news layouts for 1 and 2 columns. Be careful if you added your own layouts, you might have to update keys.

--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -708,6 +708,12 @@
             <trans-unit id="news.templateLayouts.4cols">
                 <source>4 Columns</source>
             </trans-unit>
+            <trans-unit id="news.templateLayouts.2cols">
+                <source>2 Columns</source>
+            </trans-unit>
+            <trans-unit id="news.templateLayouts.1cols">
+                <source>1 Column</source>
+            </trans-unit>
             <trans-unit id="tx_bulmapackage_meta_tags">
                 <source>Meta Tag</source>
             </trans-unit>
