[FEATURE] Add checkbox on page properties to hide breadcrumb

--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -6,6 +6,9 @@
             <trans-unit id="pages.exclude_slug_for_subpages">
                 <source>Exclude slug for subpages</source>
             </trans-unit>
+            <trans-unit id="pages.hide_breadcrumb">
+                <source>Hide breadcrumb</source>
+            </trans-unit>
             <trans-unit id="ratio.16_9">
                 <source>16:9</source>
             </trans-unit>
