--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -702,6 +702,9 @@
             <trans-unit id="tx_bulmapackage_settings_link_item.icon_custom">
                 <source>Custom icon</source>
             </trans-unit>
+            <trans-unit id="tx_bulmapackage_settings_link_item.icon.envelope">
+                <source>Envelope</source>
+            </trans-unit>
             <trans-unit id="tx_bulmapackage_settings_link_item.icon.book">
                 <source>Book</source>
             </trans-unit>
