--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -705,6 +705,12 @@
             <trans-unit id="tx_bulmapackage_settings_link_item.icon.envelope">
                 <source>Envelope</source>
             </trans-unit>
+            <trans-unit id="tx_bulmapackage_settings_link_item.icon.map">
+                <source>Map</source>
+            </trans-unit>
+            <trans-unit id="tx_bulmapackage_settings_link_item.icon.map_marker">
+                <source>Map marker</source>
+            </trans-unit>
             <trans-unit id="tx_bulmapackage_settings_link_item.icon.book">
                 <source>Book</source>
             </trans-unit>
