[TASK] Add inverted option to thumbnails type content

--- a/Resources/Private/Language/Backend.xlf
+++ b/Resources/Private/Language/Backend.xlf
@@ -165,6 +165,9 @@
             <trans-unit id="option.text-right">
                 <source>Right aligned text</source>
             </trans-unit>
+            <trans-unit id="option.inverted">
+                <source>Inverted</source>
+            </trans-unit>
             <trans-unit id="menu.card_list">
                 <source>Cards</source>
             </trans-unit>
